# curatedMetagenomicDataETL

./: CLAUDE.md  CONTRIBUTING.md  README.md  USER_GUIDE.md  create_external_tables.py  create_src_stg_tables.py  exports.sql  gather_table_metadata.py  justfile  pyproject.toml  table_metadata.json
